hphp/hack/test/typecheck/gen4a.php.exp
File "gen4a.php", line 18, characters 7-7:
This object is of type B (Typing[4110])
File "gen4a.php", line 18, characters 17-17:
It is incompatible with this object of type A
because some declarations are incompatible.
Read the following to see why:
File "gen4a.php", line 20, characters 28-28:
This is an object of type B
File "gen4a.php", line 13, characters 28-28:
It is incompatible with an object of type A
